cmake_minimum_required(VERSION 3.17)
project(CS306)

set(CMAKE_CXX_STANDARD 14)

add_executable(Task2 Task2.c)
add_executable(Task3 Task3.c )
add_executable(Task3_2 Task3_2.c )
add_executable(Task4 Task4.c )
add_executable(Task4_2 Task4_2.c )
add_executable(Task4_3 Task4_3.c )
add_executable(Test Test.c)
add_executable(Alarm2 Alarm2.c)
add_executable(Alarm1 Alarm1.c)
add_executable(Signal Signal.c)



